update border radius and panel style

--- a/src/main.scss
+++ b/src/main.scss
@@ -5,3 +5,4 @@
 @import './scss/5-icon-buttons.scss';
 @import './scss/6-editor.scss';
 @import './scss/7-animation.scss';
+@import './scss/8-panel.scss';
