--- a/src/scss/6-editor.scss
+++ b/src/scss/6-editor.scss
@@ -15,7 +15,7 @@
     > .tab[role='tab'] {
     margin-right: $tab-gutter;
     border-right: none;
-    border-radius: $border-radius-lg;
+    border-radius: $border-radius-md;
   }
 }
 
