--- a/src/scss/2-global.scss
+++ b/src/scss/2-global.scss
@@ -70,6 +70,11 @@
   border-radius: $border-radius-md;
 }
 
+.monaco-workbench .monaco-list:not(.element-focused):focus:before {
+  top: 1px;
+  height: calc(100% - 1px);
+}
+
 .monaco-tree-sticky-container {
   &,
   .monaco-tree-sticky-row {
