fix diffViewport style

--- a/src/scss/1-variables.scss
+++ b/src/scss/1-variables.scss
@@ -64,3 +64,4 @@ $popup-background: #282c34;
 $panel-background: #1b1f23;
 $status-bar-item-gap: 8px;
 $status-bar-item-height: 25px;
+$diff-viewport-width: 20px;
