replace workspace in statusbar with project manager

--- a/src/scss/4-statusbar.scss
+++ b/src/scss/4-statusbar.scss
@@ -3,7 +3,7 @@
 [id='vscodevim.vim.primary'] {
   order: 1;
 }
-[id='koalamer.workspace-in-status-bar'] {
+[id='alefragnani.project-manager.projectManager.statusBar'] {
   order: 2;
 }
 [id='status.scm.0'] {
