--- a/src/scss/1-variables.scss
+++ b/src/scss/1-variables.scss
@@ -65,3 +65,10 @@ $panel-background: #1b1f23;
 $status-bar-item-gap: 8px;
 $status-bar-item-height: 25px;
 $diff-viewport-width: 20px;
+
+$watermark-width: 550px;
+
+$windows-one-drive-path: '/C:/Users/minht/OneDrive';
+$macos-one-drive-path: '/Users/Hareki/Library/CloudStorage/OneDrive-Personal';
+$one-drive-common-path: '/Cloud Storage/Settings/VSCode/apc-custom-css';
+$watermark-path: '/dist/hareki-watermark.png';
