--- a/src/scss/1-variables.scss
+++ b/src/scss/1-variables.scss
@@ -70,5 +70,5 @@ $watermark-width: 550px;
 
 $windows-one-drive-path: '/C:/Users/minht/OneDrive';
 $macos-one-drive-path: '/Users/Hareki/Library/CloudStorage/OneDrive-Personal';
-$one-drive-common-path: '/Cloud Storage/Settings/VSCode/apc-custom-css';
-$watermark-path: '/dist/hareki-watermark.png';
+$one-drive-common-path: '/Cloud Storage/Settings/VSCode/vscode-configurations';
+$watermark-path: '/dist/watermark.png';
