update command center style

--- a/src/scss/3-titlebar.scss
+++ b/src/scss/3-titlebar.scss
@@ -9,5 +9,6 @@
     width: fit-content;
     min-width: $titlebar-search-box-min-width;
     padding: $titlebar-search-box-padding;
+    border: none;
   }
 }
