update status bar background

--- a/src/scss/1-variables.scss
+++ b/src/scss/1-variables.scss
@@ -75,3 +75,5 @@ $one-drive-common-path: '/Cloud Storage/Settings/VSCode/vscode-configurations';
 
 $watermark-dark-path: $one-drive-common-path + '/dist/watermark-dark.png';
 $watermark-light-path: $one-drive-common-path + '/dist/watermark-light.png';
+
+$status-bar-background: #23272e;
