add error color for vim primary

--- a/src/scss/1-variables.scss
+++ b/src/scss/1-variables.scss
@@ -81,3 +81,6 @@ $watermark-dark-path: $one-drive-common-path + '/dist/watermark-dark.png';
 $watermark-light-path: $one-drive-common-path + '/dist/watermark-light.png';
 
 $status-bar-background: #23272e;
+
+$error-background: #3f353f;
+$error-foreground: #f44747;
