--- a/src/scss/1-variables.scss
+++ b/src/scss/1-variables.scss
@@ -22,7 +22,7 @@ $vim-status-mode-width: 110px;
 
 $vim-input-height: 22px;
 $vim-status-input-width: 200px;
-$vim-pending-keys: #61afef;
+$vim-pending-keys-foreground: #61afef;
 $vim-pending-keys-input-width: 50px;
 
 $icon-button-container-height: 40px;
@@ -66,7 +66,7 @@ $tabs-duration: 150ms;
 
 $popup-background: #282c34;
 $panel-background: #1b1f23;
-$status-bar-item-gap: 8px;
+$status-bar-item-gap: 6px;
 $status-bar-item-height: 25px;
 $diff-viewport-width: 20px;
 
@@ -84,3 +84,5 @@ $status-bar-background: #23272e;
 
 $error-background: #3f353f;
 $error-foreground: #f44747;
+
+$date-time-foreground: #98c379;
