--- a/src/scss/4-statusbar.scss
+++ b/src/scss/4-statusbar.scss
@@ -1,5 +1,5 @@
 /* ---------------------------------- Order --------------------------------- */
-// Right items
+// Left items
 [id='vscodevim.vim.primary'] {
   order: 1;
 }
@@ -16,11 +16,29 @@
   order: 5;
 }
 
-// Left items
-[id='vscodevim.vim.showcmd'] {
-  order: 999;
+// Right items
+[id='status.notifications'] {
+  order: 2;
 }
 
+[id='angelo-breuer.clock']:not(#\9):not(#\9):not(#\9) {
+  padding-left: 5px;
+  order: 1;
+  margin-right: $screen-edge-gutter;
+  .statusbar-item-label {
+    padding: 0;
+    color: $date-time-foreground;
+    background-color: $vim-status-mode-background;
+  }
+}
+
+[id='GitHub.copilot.status'] {
+  order: 3;
+}
+
+[id='vscodevim.vim.showcmd'] {
+  order: 4;
+}
 /* --------------------------------- Spacing -------------------------------- */
 [id='#{$statusbar-id}'] {
   background-color: $status-bar-background;
@@ -171,7 +189,7 @@ div[id='vscodevim.vim.primary'] {
 
 div[id='vscodevim.vim.showcmd'] {
   > .statusbar-item-label {
-    color: $vim-pending-keys;
+    color: $vim-pending-keys-foreground;
     justify-content: center;
     transition: min-width $general-trans-duration-medium,
       opacity $general-trans-duration-medium;
@@ -179,7 +197,7 @@ div[id='vscodevim.vim.showcmd'] {
     &:not([style*='display: none']):not(#\9):not(#\9) {
       opacity: 1;
       min-width: $vim-pending-keys-input-width;
-      outline: 2px solid $vim-pending-keys;
+      outline: 2px solid $vim-pending-keys-foreground;
       padding: 2px 2px 5px;
     }
   }
