update path to the dist files, fix styles while recording

--- a/src/scss/1-variables.scss
+++ b/src/scss/1-variables.scss
@@ -66,7 +66,7 @@ $watermark-height: 200px;
 
 $windows-one-drive-path: '/C:/Users/minht/OneDrive';
 $macos-one-drive-path: '/Users/Hareki/Library/CloudStorage/OneDrive-Personal';
-$one-drive-common-path: '/Cloud Storage/Settings/VSCode/vscode-configurations';
+$one-drive-common-path: '/Cloud Storage/Settings/VSCode';
 
 $watermark-dark-path: $one-drive-common-path + '/dist/watermark-dark.png';
 $watermark-light-path: $one-drive-common-path + '/dist/watermark-light.png';
