fix multi-cursor styles

--- a/src/scss/4-statusbar.scss
+++ b/src/scss/4-statusbar.scss
@@ -21,12 +21,13 @@
   order: 2;
 }
 
-[id='angelo-breuer.clock']:not(#\9):not(#\9):not(#\9) {
+[id='Compulim.vscode-clock']:not(#\9):not(#\9):not(#\9) {
   padding-left: 5px;
   order: 1;
   margin-right: $screen-edge-gutter;
   .statusbar-item-label {
     padding: 0;
+    padding-left: 7px;
     color: $date-time-foreground;
     background-color: $date-time-background;
   }
@@ -140,11 +141,11 @@ div[id='vscodevim.vim.primary'] {
       padding: $status-bar-item-info-padding;
     }
 
-    &[aria-label='#{$vim-normal-mode}'],
-    &[aria-label='#{$vim-insert-mode}'],
-    &[aria-label='#{$vim-visual-mode}'],
-    &[aria-label='#{$vim-visual-line-mode}'],
-    &[aria-label='#{$vim-visual-block-mode}'] {
+    &[aria-label*='#{$vim-normal-mode}'],
+    &[aria-label*='#{$vim-insert-mode}'],
+    &[aria-label*='#{$vim-visual-mode}'],
+    &[aria-label*='#{$vim-visual-line-mode}'],
+    &[aria-label*='#{$vim-visual-block-mode}'] {
       width: $vim-mode-width;
       &::before {
         position: absolute;
@@ -185,30 +186,30 @@ div[id='vscodevim.vim.primary'] {
       }
     }
 
-    &[aria-label='#{$vim-insert-mode}']:not(#\9):not(#\9) {
+    &[aria-label*='#{$vim-insert-mode}']:not(#\9):not(#\9):not(#\9):not(#\9) {
       &::before {
         content: $vim-insert-mode-replacement;
       }
     }
-    &[aria-label='#{$vim-normal-mode}']:not(#\9):not(#\9) {
+    &[aria-label*='#{$vim-normal-mode}']:not(#\9):not(#\9):not(#\9):not(#\9) {
       &::before {
         content: $vim-normal-mode-replacement;
       }
     }
 
-    &[aria-label='#{$vim-visual-mode}']:not(#\9):not(#\9) {
+    &[aria-label*='#{$vim-visual-mode}']:not(#\9):not(#\9):not(#\9):not(#\9) {
       &::before {
         content: $vim-visual-mode-replacement;
       }
     }
 
-    &[aria-label='#{$vim-visual-line-mode}']:not(#\9):not(#\9) {
+    &[aria-label*='#{$vim-visual-line-mode}']:not(#\9):not(#\9):not(#\9):not(#\9) {
       &::before {
         content: $vim-visual-line-mode-replacement;
       }
     }
 
-    &[aria-label='#{$vim-visual-block-mode}']:not(#\9):not(#\9) {
+    &[aria-label*='#{$vim-visual-block-mode}']:not(#\9):not(#\9):not(#\9) {
       &::before {
         content: $vim-visual-block-mode-replacement;
       }
@@ -221,7 +222,7 @@ div[id='vscodevim.vim.showcmd'] {
     color: $vim-pending-foreground;
     justify-content: center;
     // transition: min-width $general-trans-duration-medium,
-      // opacity $general-trans-duration-medium;
+    // opacity $general-trans-duration-medium;
 
     &:not([style*='display: none']):not(#\9):not(#\9) {
       opacity: 1;
