--- a/src/scss/4-statusbar.scss
+++ b/src/scss/4-statusbar.scss
@@ -3,15 +3,19 @@
 [id='vscodevim.vim.primary'] {
   order: 1;
 }
+
 [id='alefragnani.project-manager.projectManager.statusBar'] {
   order: 2;
 }
+
 [id='status.scm.0'] {
   order: 3;
 }
+
 [id='status.scm.1'] {
   order: 4;
 }
+
 [id='status.problems'] {
   order: 5;
 }
@@ -25,6 +29,7 @@
   padding-left: 5px;
   order: 1;
   margin-right: $screen-edge-gutter;
+
   .statusbar-item-label {
     padding: 0;
     padding-left: 7px;
@@ -40,32 +45,36 @@
 [id='vscodevim.vim.showcmd'] {
   order: 4;
 }
+
 /* --------------------------------- Spacing -------------------------------- */
 [id='#{$statusbar-id}'] {
   background-color: $status-bar-background;
-  > .left-items.items-container > div,
-  > .right-items.items-container > div {
+
+  >.left-items.items-container>div,
+  >.right-items.items-container>div {
     // > .left-items.items-container > div > .statusbar-item-label,
     // > .right-items.items-container > div > .statusbar-item-label {
     height: $status-bar-item-height;
     margin: 3px 0 0;
     padding: 0;
   }
-  > .left-items.items-container > div > .statusbar-item-label,
-  > .right-items.items-container > div > .statusbar-item-label {
+
+  >.left-items.items-container>div>.statusbar-item-label,
+  >.right-items.items-container>div>.statusbar-item-label {
     margin: 0;
     padding: 0px 5px;
     border-radius: $border-radius-md;
   }
 
-  > .left-items.items-container {
-    > [id='vscodevim.vim.primary'] {
+  >.left-items.items-container {
+    >[id='vscodevim.vim.primary'] {
       margin-left: $screen-edge-gutter;
     }
+
     gap: $status-bar-item-gap;
   }
 
-  > .right-items.items-container {
+  >.right-items.items-container {
     gap: $status-bar-item-gap;
   }
 
@@ -94,7 +103,8 @@ div[id='vscodevim.vim.showcmd'] {
 
   &.error-kind {
     background-color: initial;
-    > .statusbar-item-label:not(#\9):not(#\9) {
+
+    >.statusbar-item-label:not(#\9):not(#\9) {
       width: fit-content;
       padding: $status-bar-item-info-padding;
       color: $error-foreground;
@@ -103,7 +113,7 @@ div[id='vscodevim.vim.showcmd'] {
     }
   }
 
-  > .statusbar-item-label:not(#\9) {
+  >.statusbar-item-label:not(#\9) {
     margin: 0;
     padding: 0;
     min-width: 0;
@@ -122,15 +132,12 @@ div[id='vscodevim.vim.showcmd'] {
   }
 }
 
-.left-items.items-container:has(
-    > div[id='vscodevim.vim.primary']
-      > .statusbar-item-label[style*='display: none']
-  ) {
+.left-items.items-container:has(> div[id='vscodevim.vim.primary'] > .statusbar-item-label[style*='display: none']) {
   transform: translateX(0 - ($status-bar-item-gap + $screen-edge-gutter));
 }
 
 div[id='vscodevim.vim.primary'] {
-  > .statusbar-item-label {
+  >.statusbar-item-label {
     // transition: min-width $general-trans-duration-long;
     color: $vim-mode-foreground;
     position: relative;
@@ -147,6 +154,7 @@ div[id='vscodevim.vim.primary'] {
     &[aria-label*='#{$vim-visual-line-mode}'],
     &[aria-label*='#{$vim-visual-block-mode}'] {
       width: $vim-mode-width;
+
       &::before {
         position: absolute;
         top: 0;
@@ -169,18 +177,13 @@ div[id='vscodevim.vim.primary'] {
       }
     }
 
-    &:not([aria-label*='#{$vim-normal-mode}']):not(
-        [aria-label*='#{$vim-insert-mode}']
-      ):not([aria-label*='#{$vim-visual-mode}']):not(
-        [aria-label*='#{$vim-visual-line-mode}']
-      ):not([aria-label*='#{$vim-visual-block-mode}']):not(
-        [aria-label*='|']
-      ):not([class*='error-kind']):not(#\9) {
+    &:not([aria-label*='#{$vim-normal-mode}']):not([aria-label*='#{$vim-insert-mode}']):not([aria-label*='#{$vim-visual-mode}']):not([aria-label*='#{$vim-visual-line-mode}']):not([aria-label*='#{$vim-visual-block-mode}']):not([aria-label*='|']):not([class*='error-kind']):not(#\9) {
       width: fit-content;
       color: $vim-info-foreground;
       background-color: $vim-info-background;
       text-align: center;
       padding: $status-bar-item-info-padding;
+
       &::before {
         content: none;
       }
@@ -191,6 +194,7 @@ div[id='vscodevim.vim.primary'] {
         content: $vim-insert-mode-replacement;
       }
     }
+
     &[aria-label*='#{$vim-normal-mode}']:not(#\9):not(#\9):not(#\9):not(#\9) {
       &::before {
         content: $vim-normal-mode-replacement;
@@ -218,7 +222,7 @@ div[id='vscodevim.vim.primary'] {
 }
 
 div[id='vscodevim.vim.showcmd'] {
-  > .statusbar-item-label {
+  >.statusbar-item-label {
     color: $vim-pending-foreground;
     justify-content: center;
     // transition: min-width $general-trans-duration-medium,
