--- a/src/main.scss
+++ b/src/main.scss
@@ -4,5 +4,5 @@
 @import './scss/4-statusbar.scss';
 @import './scss/5-icon-buttons.scss';
 @import './scss/6-editor.scss';
-// @import './scss/7-animation.scss';
+@import './scss/7-animation.scss';
 @import './scss/8-panel.scss';
